# bookmarks

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  release-github.yml  release-python.yml  release-rust.yml
crates/bookmarks-app/: Cargo.toml  README.md
crates/bookmarks-app/src/: lib.rs
crates/bookmarks-cli/: Cargo.toml
crates/bookmarks-cli/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  strings.rs  webapp.rs
crates/bookmarks-cli/tests/: cli_integration.rs
crates/bookmarks-core/: Cargo.toml  README.md
crates/bookmarks-core/src/: config.rs  lib.rs  open.rs  toml_storage.rs
crates/bookmarks-py/: Cargo.toml
crates/bookmarks-py/src/: lib.rs
crates/bookmarks-webapp/: Cargo.toml  README.md
crates/bookmarks-webapp/src/: lib.rs
py/bookmarks/: __init__.py  core.pyi
tests/: test_bookmarks.py
