[package]
name = "dkdc-bookmarks-app"
version = "0.3.1"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Desktop app for bookmarks (iced)"
repository = "https://github.com/lostmygithubaccount/bookmarks"
license = "MIT"
readme = "README.md"

[lib]
name = "bookmarks_app"
path = "src/lib.rs"

[dependencies]
dkdc-bookmarks-core = { version = "0.3.1", path = "../bookmarks-core" }
iced = { version = "0.14", features = ["tokio", "svg"] }
open = "5"
png = "0.17"
