[package]
name = "dkdc-bookmarks-app"
version = "0.4.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Desktop app for bookmarks (iced)"
repository = "https://github.com/dkdc-io/bookmarks"
license = "MIT"
readme = "README.md"

[lib]
name = "bookmarks_app"
path = "src/lib.rs"

[dependencies]
dkdc-bookmarks-core = { version = "0.4.0", path = "../bookmarks-core" }
iced = { version = "0.14", features = ["tokio", "svg"] }
open = "5"
png = "0.17"
