[package]
name = "dkdc-bookmarks"
version = "0.1.2"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Bookmarks in your filesystem"
repository = "https://github.com/lostmygithubaccount/bookmarks"
homepage = "https://github.com/lostmygithubaccount/bookmarks"
license = "MIT"
readme = "../../README.md"

[lib]
name = "bookmarks"
path = "src/lib.rs"

[[bin]]
name = "bookmarks"
path = "src/main.rs"

[features]
app = ["dep:iced", "dep:png"]
webapp = ["dep:axum", "dep:tokio"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
iced = { version = "0.14", features = ["tokio", "svg"], optional = true }
open = "5"
png = { version = "0.17", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
