[package]
name = "dkdc-bookmarks"
version = "0.4.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Bookmarks in your filesystem"
repository = "https://github.com/dkdc-io/bookmarks"
homepage = "https://github.com/dkdc-io/bookmarks"
license = "MIT"
readme = "../../README.md"

[lib]
name = "bookmarks"
path = "src/lib.rs"

[[bin]]
name = "bookmarks"
path = "src/main.rs"

[features]
app = ["dep:dkdc-bookmarks-app"]
webapp = ["dep:dkdc-bookmarks-webapp"]

[dependencies]
anyhow = "1"
dkdc-bookmarks-core = { version = "0.4.0", path = "../bookmarks-core" }
dkdc-bookmarks-app = { version = "0.4.0", path = "../bookmarks-app", optional = true }
dkdc-bookmarks-webapp = { version = "0.4.0", path = "../bookmarks-webapp", optional = true }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
