[workspace]

[package]
name = "bookmarks-py"
version = "0.4.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
dkdc-bookmarks = { path = "../bookmarks-cli", features = ["app", "webapp"] }
dkdc-bookmarks-core = { path = "../bookmarks-core" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
toml = "0.9"
